[project]
name = "nhp-model-databricks"
dynamic = ["version"]
description = "New Hospital Programme demand model Databricks helpers"

requires-python = ">=3.12"

dependencies = [
    "databricks-connect>=16.1.6",
    "nhp-model@git+https://github.com/the-strategy-unit/nhp_model.git@v4.3.1",
    "pandas>=2.3.2",
    "pyspark>=3.5.6",
]


# Explicitly specify which packages to include
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py312"
indent-width = 4
exclude = ["notebooks"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
"D", # pydocstyle
"PLC0415", # `import` should be at the top-level of a file
"PLR2004", # Magic value used in comparison
"PD901", # Avoid using the generic variable name `df`
"RUF005", # list concatenation
]

[tool.ruff.lint]
# Simple rules: pylint + isort
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "PL",  # pylint rules,
    "PD",  # pandas-vet
    "NPY", # NumPy-specific rules
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.isort]
# isort configuration
force-single-line = false
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools_scm]
version_file = "src/nhp/_version.py"

[tool.ty.src]
exclude = ["notebooks"]

[tool.uv.sources]
nhp-model = { git = "https://github.com/the-strategy-unit/nhp_model.git", rev = "v4.3.1" }
